[gd_scene load_steps=7 format=2]

[ext_resource path="res://utils/Plane2DMovementHelper.tscn" type="PackedScene" id=1]
[ext_resource path="res://players/Player/Sounds/cannon_fire.wav" type="AudioStream" id=2]
[ext_resource path="res://deployables/CannisterCannonDeployable/CannisterShotCannonDeployable.gd" type="Script" id=3]
[ext_resource path="res://deployables/CannisterCannonDeployable/cannon.png" type="Texture" id=4]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 4 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="BoxShape" id=2]

[node name="CannisterShotCannonDeployable" type="KinematicBody"]
transform = Transform( 0.7, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )
input_ray_pickable = false
script = ExtResource( 3 )

[node name="AnimatedSprite" type="AnimatedSprite3D" parent="."]
transform = Transform( 4, 0, 0, 0, -6.51683e-07, 1, 0, -4, -1.62921e-07, 0, -0.3, 0 )
shaded = true
frames = SubResource( 1 )

[node name="FuseTimer" type="Timer" parent="."]
one_shot = true

[node name="FireAudioStreamPlayer3D" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource( 2 )
unit_db = 17.988

[node name="Plane2DMovementHelper" parent="." instance=ExtResource( 1 )]

[node name="RecoilTimer" type="Timer" parent="."]
wait_time = 0.3
one_shot = true

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 0.510404, 0, 0, 0, 1, 0, 0, 0, 0.675051, 0, 0, 0 )
shape = SubResource( 2 )
